--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@ body {
 .hero-section {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/static/images/Money-exchange-Sri-Lanka.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/static/images/money-banks-sri-lanka-rupee-banknote-1200.jpg') center/cover no-repeat;
     color: #fff;
     display: flex;
     align-items: center;
@@ -41,7 +41,7 @@ body {
     padding: 10px 20px;
     font-size: 1rem;
     color: #fff;
-    background-color: #4CAF50;
+    background-color: #2c2c2c;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -50,7 +50,7 @@ body {
 }
 
 .hero-button:hover {
-    background-color: #45a049;
+    background-color: #fd0000;
 }
 
 .main-content {
