--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@
         <section class="container">
             <h2>Upload Currency Images</h2>
             <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data" id="uploadForm">
+                <div id="loadingSpinner" class="spinner" style="display: none;">
+                    <div class="spinner-circle"></div> <!-- Inner divs to style the spinner -->
+                </div>
                 <div class="form-group">
                     <label for="front">Upload Front Image:</label>
                     <input type="file" name="front" accept="image/*" required id="front"
