--- a/static/styles.css
+++ b/static/styles.css
@@ -338,7 +338,7 @@ button:hover {
     width: 40px;
     height: 40px;
     border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db; /* Spinner color */
+    border-top: 4px solid #2c2c2c; /* Spinner color */
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
