--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <h2>Upload Currency Images</h2>
             <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data" id="uploadForm">
                 <div id="loadingSpinner" class="spinner" style="display: none;">
-                    <div class="spinner-circle"></div> <!-- Inner divs to style the spinner -->
+                    <div class="spinner-circle"></div>
                 </div>
                 <div class="form-group">
                     <label for="front">Upload Front Image:</label>
@@ -64,7 +64,7 @@
             </ul>
         </section>
 
-        <!-- New Section: Digital Image Processing Methods -->
+        <!--Digital Image Processing Methods -->
         <section class="image-processing">
             <h2>Digital Image Processing Methods</h2>
             <div class="panel-container">
